updated full pages done. images need tweaked and want to do some work around grid

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 /*Set background image and fonts*/
 body{
-    background-image: url("so-white.png") ;
+    background-image: url("dynamic-style.png") ;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
@@ -17,8 +17,26 @@ body{
     height: 70px ;
     text-align: center;
     font-size: xx-large; 
-    left: 100px;  
+    left: 40px;  
     padding: 10px; 
+}
+
+/*add padding to main content to stop footer issues*/
+main {
+    padding-bottom: 100px;
+}
+
+
+/*bring main content in line with header name (take into account column padding 15px)*/
+main .container {
+    margin: 25px;
+}
+
+/*float image to left*/
+.index-image {
+    float: left;
+    margin: 10px;
+    max-width: auto;
 }
 
 /*Move navigation links to the left for better formatting*/
@@ -35,22 +53,105 @@ nav ul {
     border-left: 1px solid #e6e3e352;
 }
 
+/*Create box around "about me"*/
+#main-container {
+    background-color: white;
+    border: #e6e3e352 2px;
+    border-style: solid;
+    padding: 10px;
+}
+
 /*Create footer*/
-footer {
+.footer {
     height: 50px;
     text-align: center;
     color: #ffffff70;
-    font-size: small;
+    font-size: small;  
+    position: fixed;
+    bottom: 0;
+    width: 100%;   
 }
 
 /*Add top border to footer*/
 .footer-border {
     height: 5px;
+    width: 100%;
 }
 
+.row {
+    margin-top: 30px;
+}
+
+.col-md-9.col-sm-12 {
+    padding: 0px;
+    margin: 15px;
+    
+}
+
+h4 {
+    
+    width: 200px;
+    position: absolute;
+    background: #17a2b8;
+    bottom: 5px;    
+    padding: 5px;       
+    text-align: center; 
+    color: white;     
+}
+
+/*create box around all main content*/
+#content-container {
+    border-style: solid;
+    border-color: #e6e3e352;
+    background-color: white;
+    padding: 0px 20px 20px 20px;
+}
+
+/*create padding around index page image to space out text*/
+.index-img {
+    margin: 10px
+}
+
+img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+}
 
 /*Changes to formatting when screen size changes*/
 @media screen and (max-width: 768px) {
+    
+    /*bring main content in line with header name (take into account column padding 15px)*/
+    main .container {
+        margin: 0px;
+        padding: 10px;
+    }
+
+    /*Change image to centred take up full box width*/
+     #index-image {
+        margin: 10px;
+        float: left;
+        object-fit: contain;
+    }  
+
+    .header-container {
+        position: sticky;
+        width: 250px;
+        height: 70px ;
+        text-align: center;
+        font-size: large; 
+        left: 35px;  
+        padding: 10px; 
+    }
+    
+    nav ul {
+        position: relative;
+        right: 10px;
+    }
+}
+
+/*Changes to formatting when screen size changes*/
+@media screen and (max-width: 640px) {
     
     /*Change header container to take up full screen*/
     .header-container {
@@ -62,10 +163,26 @@ footer {
         padding: 10px; 
     }
 
-    /*Remove left formatting from navigation loinks to centre*/
+    /*Remove left formatting from navigation links to centre*/
     nav ul {
         position: relative;
         right: 0;
+    }
+
+    /*Change image to centred take up full box width*/
+    #index-image {
+        margin: 10px;
+        width: 100%;
+    }
+
+    #rockpaperscissors {
+        display: none;
+        
+    }
+
+    #info-widget {
+        display: none;
+        
     }
 
 }
